--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,108 @@
 body {
-    background-image: url('/assets/home-background.jpg');
+    padding: 0;
+    margin: 0;
+    height: fit-content;
 }
 
-h1 {
-    color: red;
+.ctr {
+    height: 100dvh;
+    width: 100dvw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0 0 0 / 40%);
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.ctr__signin {
+    position: absolute;
+    background: red;
+    top: 0;
+    margin: 2rem;
+    color: white;
+    font-size: .9rem;
+    padding: 0.3rem 1rem 0.3rem 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+}
+
+img {
+    position: absolute;
+    overflow: hidden;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    /*z-index: 0;*/
+}
+
+.header {
+    /*background:*/
+}
+
+.logo {
+    /*width: 200px;*/
+    width: 100px;
+    height: auto;
+    object-fit: fill;
+    aspect-ratio: 1;
+}
+
+.filter {
+    position: absolute;
+    width: 100%;
+    height: 100dvh;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
+}
+
+.ctr__hero {
+    z-index: 1;
+    /*max-width: 70%;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.ctr__hero p {
+    margin: 10px 0px 10px 0px;
+}
+
+
+.ctr__hero h1 {
+    color: white;
+    font-weight: 800;
+    font-size: 3rem;
+    z-index: 1;
+}
+.ctr__hero__get-started {
+    display: flex;
+    gap: 10px;
+    width: 35%;
+}
+
+.ctr__hero_email{
+    font-size: 1rem;
+    background: black;
+    padding: 0.8rem;
+    width: 55%;
+    opacity: 0.5;
+    color: white;
+    border: 1px solid rgb(128, 128, 128);
+    border-radius: 4px;
+}
+
+.ctr__hero_start{
+    /*margin: 0;*/
+    /*padding: 0;*/
+    font-size: 1.4rem;
+    background: red;
+    color: white;
+    border-radius: 4px;
+    width: 30%;
+    border: none;
+    font-weight: 600;
 }
