--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,6 @@
 body {
     padding: 0;
     margin: 0;
-    height: fit-content;
-}
-
-.ctr {
-    height: 100dvh;
-    width: 100dvw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(0 0 0 / 40%);
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 500;
-}
-
-.ctr__signin {
-    position: absolute;
-    background: red;
-    top: 0;
-    margin: 2rem;
-    color: white;
-    font-size: .9rem;
-    padding: 0.3rem 1rem 0.3rem 1rem;
-    font-weight: 600;
-    border: none;
-    border-radius: 4px;
 }
 
 img {
@@ -38,23 +12,59 @@ img {
     /*z-index: 0;*/
 }
 
-.header {
-    /*background:*/
-}
-
-.logo {
-    /*width: 200px;*/
-    width: 100px;
-    height: auto;
-    object-fit: fill;
-    aspect-ratio: 1;
-}
-
 .filter {
     position: absolute;
     width: 100%;
     height: 100dvh;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
+}
+
+.ctr {
+    height: 100dvh;
+    width: 100dvw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0 0 0 / 40%);
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.header {
+    /*background:*/
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 60%;
+    align-items: center;
+}
+
+.header__signin {
+    background: red;
+    top: 0;
+    margin: 2rem;
+    color: white;
+    font-size: .9rem;
+    padding: 0.3rem 1rem 0.3rem 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    z-index: 5;
+}
+
+.header__logo-ctr {
+    /*width: 100%;*/
+    display: flex;
+    align-items: center;
+}
+
+.header__logo {
+    width: 6rem;
+    height: auto;
+    object-fit: fill;
 }
 
 .ctr__hero {
@@ -73,4 +83,41 @@ img {
 
 h1 {
     color: red;
+}
+
+.ctr__hero__get-started {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.ctr__hero_email {
+    border: 1px solid grey;
+    background: black;
+    opacity: 0.7;
+    color: white;
+    font-size: 1rem;
+    padding: 1rem;
+    flex: 1;
+    border-radius: 4px;
+}
+
+
+.ctr__hero_start {
+    width: 30%;
+    background: red;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 700;
+    padding: 1rem;
+    border: none;
+    border-radius: 4px;
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        gap: 30%;
+    }
 }
