{+/~} Adding user (settings) view, and updatinf profile selection view (adding a button to go to user view).

--- a/styles/profile-selection.css
+++ b/styles/profile-selection.css
@@ -30,3 +30,14 @@
   height: 100%;
   border-radius: 0.2em;
 }
+
+.settings-icon {
+  height: 4em;
+  position: fixed;
+  top: 1em;
+  right: 1em;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
